# tauri-svelte

./: .eslintrc.json  .prettierignore  .prettierrc.json  README.md  package.json  svelte.config.js  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Greet.svelte
src/lib/components/: HelloWorld.svelte  NavBar.svelte  NavLink.svelte
src/routes/: +layout.svelte  +page.svelte
